--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <div class="col-md-6">
                             <div class="featured-item feature-border-box text-left wow fadeInLeft" onclick="showDiv1()">
                                 <div class="icon">
-                                    <i class="icon-ecommerce_graph_increase"></i>
+                                    <i class="icon-skull"></i>
                                 </div>
                                 <div class="title text-uppercase">
                                     <h1 style="display: inline">1</h1>
@@ -168,7 +168,7 @@
                                     <h4 style="display: inline">Survival Rate</h4>
                                 </div>
                                  <div class="desc" style="text-align: justify" style="cursor: pointer; cursor;">
-                                    Only 60 out of 500 corporations from the fortune 500 from 1955 is still as leading as it was <sup><a href="#fn2" id="ref2">2</a></sup>. Even more so, as can be seen in the graph below <sup><a href="#fn3" id="ref3">3</a></sup>, the expected lifetime of a company is projected to be only 18 year in 2027<sup><a href="#fn4" id="ref4">4</a></sup>.
+                                    When looking at the Fortune 500 from 1960, only 60 out of 500 corporations are still on the list<sup><a href="#fn2" id="ref2">2</a></sup>. Many of those companies operated on B2B level and seemed immortal at the time. This illustrated that even big corporations struggle with continuous innovation and adaption to trends and needs. Even more so, as can be seen in the graph below <sup><a href="#fn3" id="ref3">3</a></sup>, the expected lifetime of a company is gradually decreasing, and projected to be only 18 year in 2027<sup><a href="#fn4" id="ref4">4</a></sup>.
                                 </div>
                                  <div id="graph1" style="display: none">
                                 <div class="divider d-border d-solid d-single text-center">
@@ -185,7 +185,7 @@
                         <div class="col-md-6">
                             <div class="featured-item feature-border-box text-left wow fadeInRight" onclick="showDiv2()">
                                 <div class="icon">
-                                    <i class="icon-skull"></i>
+                                    <i class="icon-caution"></i>
                                 </div>
                                 <div class="title text-uppercase">
                                     <h4 style="display: inline">overestimating demand</h4>
@@ -193,14 +193,13 @@
                                     <h1 style="display: inline">%</h1>
                                 </div>
                                 <div class="desc" style="text-align: justify" style="cursor: pointer; cursor;">
-                                    Because of the so called "Bullwhip Effect", a demand of ↑5% on consumer level may be interpreted by the supply chains as a change in demand of up to ↑40%.
-                                    Distorted information from one end of a supply chain to the other can lead to tremendous inefficiencies: excessive inventory investment, poor customer service, lost revenues, misguided capacity plans, ineffective transportation, and missed production schedules<sup><a href="#fn5" id="ref5">5</a></sup>.
+                                    Because of the so called "Bullwhip Effect", a demand of ↑5% on consumer level may be interpreted by the supply chains as a change in demand of up to ↑40%. Distorted information from one end of a supply chain to the other can lead to tremendous inefficiencies: excessive inventory investment, poor customer service, lost revenues, misguided capacity plans, ineffective transportation, and missed production schedules<sup><a href="#fn5" id="ref5">5</a></sup>.</br></br>
                                 </div>
                                 <div id="graph2" style="display: none">
                                 <div class="divider d-border d-solid d-single text-center">
                             <i class="fa fa-ellipsis-h"></i>
                              </div>
-                                <img src="img/parallax/graph_bw.gif" alt="" style="width: 100%; display: block; margin-left: auto; margin-right: auto;">
+                                <img src="img/parallax/graph_bw.gif" alt="" style="width: 100%; display: block; margin-left: auto; margin-right: auto;"></br>
                                 </div>
                                  <div>
                                     </br><h4 id="show2" class="text-uppercase text-center" style="cursor: pointer; cursor;"><a> Click to Visualise </a></h4>
@@ -236,8 +235,9 @@
                                 </div>
                                     </div>
                                     <div class="desc" style="text-align: justify">
-                                     In Business-to-Business settings corporations tend to start experiencing difficulties with innovation once they grow too large. Because of the many stakeholders involved in a value chain, it is hard to make problems concrete. Many companies lose sight of the end-customer, and do not dare to innovate because of the fear of making bad investment decision which could jeopardize their competitive advantage. But this could change. 
-                                     <sup><a href="#fn1" id="ref1">1</a></sup></br></br>
+                                     In Business-to-Business settings corporations tend to start experiencing <font style="color: white">difficulties with innovation</font> once they grow too large. This is mainly because the corporations shift from an innovation or technology driven mindset, to a <font style="color: white">risk-reduction mindset</font>. The companies do not dare to innovate because of the fear of making bad investment decision which could jeopardize their competitive advantage<sup><a href="#fn7" id="ref7">7</a></sup>. </br></br>
+
+                                     Apart from this, as other companies within the B2B value chain act as 'barriers' many companies <font style="color: white">lose sight of end-consumers</font>. Furthermore, because of the scale of the corporations, and the many stakeholders involved in a value chain, companies often have to deal with <font style="color: white">conflict of interest</font><sup><a href="#fn1" id="ref1">1</a></sup>.</br></br>
                                 </div>
                                     <a href="#" class="btn btn-small btn-light-solid btn-transparent show-detail" onclick="pictureChange()" style="display: inline">Show Solution</a>
                                    <!--<a href="#" class="show-detail" onclick="pictureChange()">View Details</a>-->
@@ -292,14 +292,17 @@
                                     <h4 style="display: inline">Increase of return</h4>
                                 </div>
                                 <div class="desc" style="text-align: justify">
-                                     Companies that started developing solutions from the outside rather than inside outside, with a design-centric perspective have been shown to get a 10 year returns yielding of 2.11 times compared to traditional corporations. 
+                                     By using the design intervention, we prevent your company from getting into a gradual decline in assets, which could become fatal. Companies that started developing solutions from the outside rather than inside outside, with a design-centric perspective have been shown to get a 10 year returns yielding of 2.11 times compared to traditional corporations. 
                                      <sup><a href="#fn1" id="ref1">1</a></sup>
                                 </div>
                                  <div>
                                    </br> <h4 id="show3" class="text-uppercase text-center" style="cursor: pointer; cursor;"><a> Click to Visualise </a></h4>
                                 </div>
                             </div>
-                            <div class="col-md-6 fadeInLeft" id="graph3" style="display: none">  
+                            <div class="col-md-6" id="a_graph3">  
+                            <img src="img/parallax/graph_vi.png" alt="" style="width: 100%; display: block; margin-left: auto; margin-right: auto;">
+                            </div>
+                            <div class="col-md-6 fadeInRight" id="graph3" style="display: none">  
                             <img src="img/parallax/graph_vi.gif" alt="" style="width: 100%; display: block; margin-left: auto; margin-right: auto;">
                             </div>
                         </div>
@@ -522,13 +525,16 @@
                             <div class="col-md-6 wow fadeInRight">
                                 <div class="light-txt space">
                                     <h2 class="text-uppercase light-txt"><font >Disruption Value Chain G4S</font></h2>
+                                     <h2 style="display:inline; color: white">01 </h2> 
                                     <h4 class="text-uppercase light-txt" style="display: inline">Problem</h4>
                                     <p class="light-txt" style="text-align: justify">
                                         in 2012, G4S, formerly Group 4 Securicor, experienced the effect of globalisation. The combination of bad publicity, and the increased amount, complexity and mutual dependence of organisations lead to reputational damage which resulted in a fragile supply chain, and a brittle relationship between end-consumers.</p>
+                                         <h2 style="display:inline; color: white">02 </h2> 
                                          <h4 class="text-uppercase light-txt" style="display: inline">Solution</h4>
                                          <p class="light-txt" style="text-align: justify">
                                     We recognised that an increased need for proper risk management from a consumer perspective is needed in order to retain a positive image and prevent sypply chain disruptions. 
                                     </p>
+                                     <h2 style="display:inline; color: white">03 </h2> 
                                     <h4 class="text-uppercase light-txt" style="display: inline">Result</h4>
                                          <p class="light-txt" style="text-align: justify">
                                     The new Brand DNA, taking into account end-consumer relationships, has ensured that the global security market is increasingly being recognised as an essential par for outsourcing capital-intensive risk strategies.  
@@ -556,13 +562,16 @@
                             <div class="col-md-6">
                                 <div class="light-txt space">
                                     <h2 class="text-uppercase light-txt"><font >Brand DNA Deloitte</font></h2>
+                                     <h2 style="display:inline; color: white" >01 </h2> 
                                     <h4 class="text-uppercase light-txt" style="display: inline">Problem</h4>
                                     <p class="light-txt" style="text-align: justify">
                                         Deloitte’s Energy & Resources specialists provide comprehensive, integrated solutions to all segments of the Oil & Gas, Power & Utilities, Alternative Energy, and Mining sectors. We offer clients exceptionally detailed industry knowledge and a global network, alongside local market delivery.</p>
+                                        <h2 style="display:inline; color: white">02 </h2> 
                                          <h4 class="text-uppercase light-txt" style="display: inline">Solution</h4>
                                          <p class="light-txt" style="text-align: justify">
                                     We recognised that an increased need for proper risk management from a consumer perspective is needed in order to retain a positive image and prevent sypply chain disruptions. 
                                     </p>
+                                    <h2 style="display:inline; color: white">03 </h2> 
                                     <h4 class="text-uppercase light-txt" style="display: inline">Result</h4>
                                          <p class="light-txt" style="text-align: justify">
                                     The new Brand DNA, taking into account end-consumer relationships, has ensured that the global security market is increasingly being recognised as an essential par for outsourcing capital-intensive risk strategies.  
@@ -757,8 +766,13 @@
                                <!--Bron-->
                               <sup id="fn6"><font style="color: rgb(242,103,33)">6]</font>   Calabretta, G., Gemser, G., & Karpen, I. (2016). Strategic design: eight essential practices every strategic designer must master. Amsterdam: BIS<a href="#ref6" title="Jump back to footnote 6 in the text.">↩</a></br></sup>
                               <!--Bron-->
+                                <!--Bron-->
+                              <sup id="fn7"><font style="color: rgb(242,103,33)">7]</font> Deeb, G. (2014, January 08). The 5 Reasons Big Companies Struggle With Innovation. Retrieved April 07, 2017, from https://www.forbes.com/sites/georgedeeb/2014/01/08/the-five-reasons-big-companies-struggle-with-innovation/#2d18b4dd2958<a href="#ref7" title="Jump back to footnote 7 in the text.">↩</a></br></sup>
+                              <!--Bron-->
                         </div> </div> </br></br>
         <!--body content end-->
+
+        
 
           </section>
 
@@ -819,7 +833,8 @@
       <script>
      function showDiv3() {
    document.getElementById('graph3').style.display = "block"; 
-   document.getElementById('show3').style.display = "none"; }
+   document.getElementById('show3').style.display = "none"; 
+   document.getElementById('a_graph3').style.display = "none";}
    </script>
     <!--Graph-->
 
