--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                     <h1 style="display: inline">%</h1>
                                 </div>
                                 <div class="desc" style="text-align: justify" style="cursor: pointer; cursor;">
-                                    Because of the so called "Bullwhip Effect", a demand of ↑5% on consumer level may be interpreted by the supply chains as a change in demand of up to ↑40%. Distorted information from one end of a supply chain to the other can lead to tremendous inefficiencies: excessive inventory investment, poor customer service, lost revenues, misguided capacity plans, ineffective transportation, and missed production schedules<sup><a href="#fn5" id="ref5">5</a></sup>.</br></br>
+                                    Because of the so called "Bullwhip Effect", a demand of ↑5% on consumer level may be interpreted by the supply chains as a change in demand of up to ↑40%. Distorted information from one end of a supply chain to the other can lead to tremendous inefficiencies: excessive inventory investment, poor customer service, lost revenues, misguided capacity plans, ineffective transportation, and missed production schedules<sup><a href="#fn5" id="ref5">5</a></sup>. Above this, researched indicated that only +/- 9% of companies are fully prepared for supply chain disruptions such as these<sup><a href="#fn9" id="ref9">9</a></sup>. 
                                 </div>
                                 <div id="graph2" style="display: none">
                                 <div class="divider d-border d-solid d-single text-center">
@@ -235,33 +235,29 @@
                                 </div>
                                     </div>
                                     <div class="desc" style="text-align: justify">
-                                     In Business-to-Business settings corporations tend to start experiencing <font style="color: white">difficulties with innovation</font> once they grow too large. This is mainly because the corporations shift from an innovation or technology driven mindset, to a <font style="color: white">risk-reduction mindset</font>. The companies do not dare to innovate because of the fear of making bad investment decision which could jeopardize their competitive advantage<sup><a href="#fn7" id="ref7">7</a></sup>. </br></br>
+                                     In Business-to-Business settings corporations tend to start experiencing <font style="color: white">difficulties with innovation</font><sup><a href="#fn8" id="ref8">8</a></sup> once they grow too large. This is mainly because the corporations shift from an innovation or technology driven mindset, to a <font style="color: white">risk-reduction mindset</font><sup><a href="#fn7" id="ref7">7</a></sup>. The companies do not dare to innovate because of the fear of making bad investment decision which could jeopardize their competitive advantage. </br></br>
 
-                                     Apart from this, as other companies within the B2B value chain act as 'barriers' many companies <font style="color: white">lose sight of end-consumers</font>. Furthermore, because of the scale of the corporations, and the many stakeholders involved in a value chain, companies often have to deal with <font style="color: white">conflict of interest</font><sup><a href="#fn1" id="ref1">1</a></sup>.</br></br>
+                                     Besides this, the end-customer are key figure and their needs, values and opinions will affect the whole supply chain<sup><a href="#fn1" id="ref9">9</a></sup>. However, as other companies within the B2B supply chain act as 'barriers' many companies <font style="color: white">lose sight of end-consumers</font>. Furthermore, because of the scale of the corporations, and the many stakeholders involved in a supply chain, companies often have to deal with <font style="color: white">conflict of interest</font>.</br></br>
                                 </div>
                                     <a href="#" class="btn btn-small btn-light-solid btn-transparent show-detail" onclick="pictureChange()" style="display: inline">Show Solution</a>
                                    <!--<a href="#" class="show-detail" onclick="pictureChange()">View Details</a>-->
                                     <div class="career-details-info" style="background: #222222">
                                         <div class="c-list-row">
                                             <label><font style="color: white">Solution</font></label>
-                                            <div class="info">As an innovation consultant, I am able to look at the problem from an outside and user-centered perspective. This is done with a few important steps</div>
+                                            <div class="info">As an innovation consultant, I am able to look at the problem from an outside and user-centered perspective. Hereby the above problems can be tackled with a design thinking approach, taking the end-consumer into account. The process consists out of 3 important steps</div>
                                         </div>
                                         <div class="c-list-row">
                                             <label><font style="color: white">Steps</font></label>
                                             <div class="info">
                                                 <ul class="icon-list">
-                                                    <li><i class="fa fa-check theme-color"></i> Removing Barriers Within Value Chain</li>
-                                                    <li><i class="fa fa-check theme-color"></i> Relate Supply to End-Consumer Demands</li>
-                                                    <li><i class="fa fa-check theme-color"></i> Implementing Lasting Innovation Mindset</li>
+                                                    <li><i class="fa fa-check theme-color"></i> Relate Operations to End-Consumer Needs</li>
+                                                    <li><i class="fa fa-check theme-color"></i> Implement Solution Seamless Into Daily Businesses</li>
+                                                    <li><i class="fa fa-check theme-color"></i> Make Solutions Lasting by Changing Operative Mindset</li>
                                                 </ul>
                                             </div>
                                         </div>
-                                        <div class="c-list-row">
-                                            <label><font style="color: white">Method</font></label>
-                                            <div class="info">Radical Innovation Through a Design Intervention Approach</div>
-                                        </div>
                                         <div class="m-top-30">
-                                            <a href="#" class=" apply-btn cancel-btn"> Close Details</a>
+                                            <a href="#" class=" apply-btn cancel-btn">Close Details</a>
                                         </div>
                                     </div>
                                 </div>
@@ -273,46 +269,6 @@
                 </div>
 
              <!--Silos-->
-
-             <!--facts good-->
-
-           <!--feature-->
-            <div class="page-content">
-                <div class="container">
-                    <!--feature border box start-->
-                    <div class="row">
-                        <div class="col-md-12 featured-item feature-border-box text-left" onclick="showDiv3()">
-                        <div class="icon">
-                                    <i class="icon-ecommerce_graph_increase"></i>
-                                </div>
-                            <div class="col-md-6">
-                                <div class="title text-uppercase">
-                                    <h1 class="timer" data-from="0" data-to="211" data-speed="2000" style="display: inline"></h1>
-                                    <h1 style="display: inline">%</h1>
-                                    <h4 style="display: inline">Increase of return</h4>
-                                </div>
-                                <div class="desc" style="text-align: justify">
-                                     By using the design intervention, we prevent your company from getting into a gradual decline in assets, which could become fatal. Companies that started developing solutions from the outside rather than inside outside, with a design-centric perspective have been shown to get a 10 year returns yielding of 2.11 times compared to traditional corporations. 
-                                     <sup><a href="#fn1" id="ref1">1</a></sup>
-                                </div>
-                                 <div>
-                                   </br> <h4 id="show3" class="text-uppercase text-center" style="cursor: pointer; cursor;"><a> Click to Visualise </a></h4>
-                                </div>
-                            </div>
-                            <div class="col-md-6" id="a_graph3">  
-                            <img src="img/parallax/graph_vi.png" alt="" style="width: 100%; display: block; margin-left: auto; margin-right: auto;">
-                            </div>
-                            <div class="col-md-6 fadeInRight" id="graph3" style="display: none">  
-                            <img src="img/parallax/graph_vi.gif" alt="" style="width: 100%; display: block; margin-left: auto; margin-right: auto;">
-                            </div>
-                        </div>
-
-                    </div>
-                    <!--feature border box end-->
-                </div>
-            </div>
-            <!--feature-->
-                        <!--facts good-->
 
             <!--core process-->
             <div class="page-content" id="process">
@@ -378,7 +334,7 @@
                                 <a class="wow fadeInDown" href="">Mobilising Stakeholders</a>
                             </dt>
                             <dd style="text-align: justify">
-                                Especially within a value chain, it is essential to identify the important stakeholders, involve them in the process, and prepare them to work with a design approach to innovation. 
+                                Especially within a supply chain, it is essential to identify the important stakeholders, involve them in the process, and prepare them to work with a design approach to innovation. 
                             </dd>
                         </dl>
                         <!-- accordion time line end-->
@@ -501,6 +457,46 @@
             </div>
             <!--core process-->
 
+                 <!--facts good-->
+
+           <!--feature-->
+            <div class="page-content">
+                <div class="container">
+                    <!--feature border box start-->
+                    <div class="row">
+                        <div class="col-md-12 featured-item feature-border-box text-left" onclick="showDiv3()">
+                        <div class="icon">
+                                    <i class="icon-ecommerce_graph_increase"></i>
+                                </div>
+                            <div class="col-md-6">
+                                <div class="title text-uppercase">
+                                    <h1 class="timer" data-from="0" data-to="211" data-speed="2000" style="display: inline"></h1>
+                                    <h1 style="display: inline">%</h1>
+                                    <h4 style="display: inline">Increase of return</h4>
+                                </div>
+                                <div class="desc" style="text-align: justify">
+                                     By using the design intervention, we prevent your company from getting into a gradual decline in assets, which could become fatal. Companies that started developing solutions from the outside rather than inside outside, with a design-centric perspective have been shown to get a 10 year returns yielding of 2.11 times compared to traditional corporations. 
+                                     <sup><a href="#fn1" id="ref1">1</a></sup>
+                                </div>
+                                 <div>
+                                   </br> <h4 id="show3" class="text-uppercase text-center" style="cursor: pointer; cursor;"><a> Click to Visualise </a></h4>
+                                </div>
+                            </div>
+                            <div class="col-md-6" id="a_graph3">  
+                            <img src="img/parallax/graph_vi.png" alt="" style="width: 100%; display: block; margin-left: auto; margin-right: auto;">
+                            </div>
+                            <div class="col-md-6 fadeInRight" id="graph3" style="display: none">  
+                            <img src="img/parallax/graph_vi.gif" alt="" style="width: 100%; display: block; margin-left: auto; margin-right: auto;">
+                            </div>
+                        </div>
+
+                    </div>
+                    <!--feature border box end-->
+                </div>
+            </div>
+            <!--feature-->
+                        <!--facts good-->
+
             <!--button-->
             <div id="usecase">
             </br></br></br>
@@ -524,7 +520,7 @@
                             </div>
                             <div class="col-md-6 wow fadeInRight">
                                 <div class="light-txt space">
-                                    <h2 class="text-uppercase light-txt"><font >Disruption Value Chain G4S</font></h2>
+                                    <h2 class="text-uppercase light-txt"><font >Disruption Supply Chain G4S</font></h2>
                                      <h2 style="display:inline; color: white">01 </h2> 
                                     <h4 class="text-uppercase light-txt" style="display: inline">Problem</h4>
                                     <p class="light-txt" style="text-align: justify">
@@ -769,9 +765,18 @@
                                 <!--Bron-->
                               <sup id="fn7"><font style="color: rgb(242,103,33)">7]</font> Deeb, G. (2014, January 08). The 5 Reasons Big Companies Struggle With Innovation. Retrieved April 07, 2017, from https://www.forbes.com/sites/georgedeeb/2014/01/08/the-five-reasons-big-companies-struggle-with-innovation/#2d18b4dd2958<a href="#ref7" title="Jump back to footnote 7 in the text.">↩</a></br></sup>
                               <!--Bron-->
+                              <!--Bron-->
+                              <sup id="fn8"><font style="color: rgb(242,103,33)">8]</font>  Abbosh, O., Nunes, P., Savic, V., & Moore, M. (2017, March 23). The Big Squeeze: How Compression Threatens Old Industries. Retrieved April 06, 2017, from http://sloanreview.mit.edu/article/the-big-squeeze-how-compression-threatens-old-industries/
+                            <a href="#ref8" title="Jump back to footnote 8 in the text.">↩</a></br></sup>
+                              <!--Bron-->
+                               <!--Bron-->
+                              <sup id="fn9"><font style="color: rgb(242,103,33)">9]</font>  Constantine, C. G., & Goldbach, G. (2013). How the strongest supply chains protect what customers cherish most. PricewaterhouseCoopers - Resilience Journal. Retrieved April 12, 2017, from http://www.pwc.com/gx/en/services/advisory/consulting/risk/resilience/publications/supply-chains.html
+                            <a href="#ref9" title="Jump back to footnote 9 in the text.">↩</a></br></sup>
+                              <!--Bron-->
                         </div> </div> </br></br>
         <!--body content end-->
 
+     
         
 
           </section>
