--- a/index.html
+++ b/index.html
@@ -235,24 +235,24 @@
                                 </div>
                                     </div>
                                     <div class="desc" style="text-align: justify">
-                                     In Business-to-Business settings corporations tend to start experiencing <font style="color: white">difficulties with innovation</font><sup><a href="#fn8" id="ref8">8</a></sup> once they grow too large. This is mainly because the corporations shift from an innovation or technology driven mindset, to a <font style="color: white">risk-reduction mindset</font><sup><a href="#fn7" id="ref7">7</a></sup>. The companies do not dare to innovate because of the fear of making bad investment decision which could jeopardize their competitive advantage. </br></br>
+                                     In Business-to-Business settings corporations tend to start experiencing <font style="font-size: 120%; color: white; opacity: 0.7">difficulties with innovation</font><sup><a href="#fn8" id="ref8">8</a></sup> once they grow too large. This is mainly because the corporations shift from an innovation or technology driven mindset, to a <font style="font-size: 120%; color: white; opacity: 0.7">risk-reduction mindset</font><sup><a href="#fn7" id="ref7">7</a></sup>. The companies do not dare to innovate because of the fear of making bad investment decision which could jeopardize their competitive advantage. </br></br>
 
-                                     Besides this, the end-customer are key figure and their needs, values and opinions will affect the whole supply chain<sup><a href="#fn1" id="ref9">9</a></sup>. However, as other companies within the B2B supply chain act as 'barriers' many companies <font style="color: white">lose sight of end-consumers</font>. Furthermore, because of the scale of the corporations, and the many stakeholders involved in a supply chain, companies often have to deal with <font style="color: white">conflict of interest</font>.</br></br>
+                                     Besides this, the end-customer are key figure and their needs, values and opinions will affect the whole supply chain<sup><a href="#fn1" id="ref9">9</a></sup>. However, as other companies within the B2B supply chain act as 'barriers' many companies <font style="font-size: 120%; color: white; opacity: 0.7">lose sight of end-consumers</font>. Furthermore, because of the scale of the corporations, and the many stakeholders involved in a supply chain, companies often have to deal with <font style="font-size: 120%; color: white; opacity: 0.7">conflict of interest</font>.</br></br>
                                 </div>
                                     <a href="#" class="btn btn-small btn-light-solid btn-transparent show-detail" onclick="pictureChange()" style="display: inline">Show Solution</a>
                                    <!--<a href="#" class="show-detail" onclick="pictureChange()">View Details</a>-->
                                     <div class="career-details-info" style="background: #222222">
                                         <div class="c-list-row">
                                             <label><font style="color: white">Solution</font></label>
-                                            <div class="info">As an innovation consultant, I am able to look at the problem from an outside and user-centered perspective. Hereby the above problems can be tackled with a design thinking approach, taking the end-consumer into account. The process consists out of 3 important steps</div>
+                                            <div class="info">As an  <font style="font-size: 135%; color: rgb(242,103,33)">B2B innovation consultant</font> within Deloitte, I am able to look at the problem from an outside and <font style="font-size: 120%; color: white; opacity: 0.7">human-centered perspective</font>. Hereby the above problems can be tackled with a design thinking approach, taking the end-consumer into account. The process consists out of 3 important steps</div>
                                         </div>
                                         <div class="c-list-row">
                                             <label><font style="color: white">Steps</font></label>
                                             <div class="info">
                                                 <ul class="icon-list">
-                                                    <li><i class="fa fa-check theme-color"></i> Relate Operations to End-Consumer Needs</li>
-                                                    <li><i class="fa fa-check theme-color"></i> Implement Solution Seamless Into Daily Businesses</li>
-                                                    <li><i class="fa fa-check theme-color"></i> Make Solutions Lasting by Changing Operative Mindset</li>
+                                                    <li><i class="fa fa-check theme-color"></i>Relate Operations to <font style="font-size: 120%; color: white; opacity: 0.7">End-Consumer Needs</font></li>
+                                                    <li><i class="fa fa-check theme-color"></i><font style="font-size: 120%; color: white; opacity: 0.7">Seamless Implementation</font>  of Solution Into Daily Businesses</li>
+                                                    <li><i class="fa fa-check theme-color"></i><font style="font-size: 120%; color: white; opacity: 0.7">Making Lasting Solutions</font> by Changing Operative Mindset</li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -475,7 +475,7 @@
                                     <h4 style="display: inline">Increase of return</h4>
                                 </div>
                                 <div class="desc" style="text-align: justify">
-                                     By using the design intervention, we prevent your company from getting into a gradual decline in assets, which could become fatal. Companies that started developing solutions from the outside rather than inside outside, with a design-centric perspective have been shown to get a 10 year returns yielding of 2.11 times compared to traditional corporations. 
+                                     <font style="font-size: 135%; color: rgb(242,103,33)">Concluding,</font> by using the design intervention, we do not only bring back innovation, but we prevent your company from getting into a gradual decline in assets, which could become fatal. Even more so, companies which started operating from a design-centric perspective, providing solutions from the outside (consumers needs) rather than inside, have been shown to get a 10 year returns yielding of 2.11 times compared to traditional corporations. 
                                      <sup><a href="#fn1" id="ref1">1</a></sup>
                                 </div>
                                  <div>
